# snake

./: .gitignore  README.md  game.pu  rule.pu  snake.cpp  snakeVC.cpp
snake3D/: CMakeLists.txt  Shader.cpp  Shader.h  glad.c  snake3D.cpp  t.cpp
snake3D/.cache/clangd/index/: Shader.cpp.24F41914C2D5548C.idx  Shader.h.A40646A2C6082283.idx  _fixes.hpp.DD1B9186B84A08DC.idx  _vectorize.hpp.9081B8562E28282D.idx  common.hpp.E9E22B89F3DE7D5E.idx  compute_common.hpp.5E1D1E812A10E71D.idx  compute_vector_relational.hpp.BF122FA1A64B7DC9.idx  constants.hpp.CBD489B78417DC0C.idx  constants.inl.D59E27324EE70FBA.idx  epsilon.hpp.B94245C6299FCD18.idx  epsilon.inl.4166CC32F197F8B1.idx  exponential.hpp.63AFCF69E127A5A1.idx  func_common.inl.62383D0A5875AF29.idx  func_exponential.inl.65E8CFE43F90225F.idx  func_geometric.inl.117EA34DB5B7C802.idx  func_integer.inl.C00FAD6B20BFA539.idx  func_matrix.inl.E203F5D9E6D39D65.idx  func_packing.inl.98F727B3541532CF.idx  func_trigonometric.inl.A982166413E75B74.idx  func_vector_relational.inl.953D76F6772A4021.idx  fwd.hpp.2E4991774F6A430C.idx  geometric.hpp.A830818D9FB33733.idx  glad.c.841662BE398B2154.idx  glad.h.1F4110E9E2B0BD92.idx  glfw3.h.A50D3D202A100389.idx  glm.hpp.BD1F85EDA7B50C0F.idx  integer.hpp.E7A3591132155B95.idx  khrplatform.h.3EB0014D6B8FF7C8.idx  mat2x2.hpp.ED69D9E2325BB5CD.idx  mat2x3.hpp.824841EA7866E3AD.idx  mat2x4.hpp.6F9A6B13A01E7ED3.idx  mat3x2.hpp.76E85EA6B2508836.idx  mat3x3.hpp.8075CB7FDBAB9428.idx  mat3x4.hpp.0D50C265CDD8C56D.idx  mat4x2.hpp.D33C2D89CA2F02AB.idx  mat4x3.hpp.8B407249A376BBEC.idx  mat4x4.hpp.45BD4FC53431253A.idx  (+152 more)
(+1 files in other folders)
